# godotTestLib

./: .gitignore  CMakeLists.txt  LICENSE  README.md  godotengineTestApp.cpp  run_scons.cmd
demo/: icon.svg.import  main.tscn  project.godot
src/: godotcustomsprite.cpp  godotcustomsprite.hpp  godotengineTestApp.h  godotregistertypes.cpp  godotregistertypes.hpp  main.cpp
